@@ -36,6 +36,7 @@ t/42-interrupt_both_and_pud.t
 t/45-shift_reg_adc.t
 t/55-dac.t
 t/60-lcd.t
+t/64-i2c_exceptions.t
 t/65-i2c.t
 t/67-rtc.t
 t/70-alt_modes.t
